# High_throughput_phenotyping

src/: CMakeLists.txt  main.cpp
src/headers/: basic_data.h  cloud_locations.h  cotton_bolls.h  quick_sort.h  split.h
src/modules/: basic_data.cpp  cloud_locations.cpp  cotton_bolls.cpp  quick_sort.cpp  split.cpp
